--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,3 +2,7 @@ flask==3.0.0
 flask-cors==4.0.0
 requests==2.31.0
 werkzeug==3.0.1
+pandas==2.1.4
+matplotlib==3.8.2
+openpyxl==3.1.2
+seaborn==0.13.0
